the recent discounts functionality is working, going for the testing part with gradle